# fcnpr

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.MVRuMr  README.md  fcnpr.kdev4  main.cpp
.kdev4/: fcnpr.kdev4
circuits/: C17.v
doc/: Class Diagram.asta
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
main/: CMakeLists.txt  alice_main.cpp  args_main.cpp  main.cpp
src/: .PandR_GA.cpp.swp  Area.hpp  CMakeLists.txt  Cell.cpp  Cell.h  Cell.hpp  ChessBoard.cpp  ChessBoard.h  Exception.hpp  Field.hpp  Json.cpp  Json.h  LevelPlacement.cpp  LevelPlacement.h  LevelRouting.cpp  LevelRouting.h  Makefile  Network.cpp  Network.h  Network.hpp  PandR.cpp  PandR.h  PandR_GA.cpp  PandR_GA.h  PandR_LevelPR.cpp  PandR_LevelPR.h  PandR_TopoOrder.cpp  PandR_TopoOrder.h  PandrJson.hpp  PlacementAndRouting.cpp  PlacementAndRouting.h  PlacementAndRouting.hpp  Router.hpp  Solution.cpp  Solution.h  Traits.hpp  Types.h  Types.hpp  cmake_install.cmake
src/algorithms/: Blacklist.hpp  BreadthFirstSearch.hpp  CMakeLists.txt  I_Algorithm.hpp  I_Placement.hpp  I_Routing.hpp  Placement.hpp  Placements.hpp  SimulatedAnnealing.hpp
src/algorithms/meta-heuristics/: CMakeLists.txt
src/algorithms/meta-heuristics/simulated-annealing/: I_SimulatedAnnealing.hpp  Parameters.hpp
src/algorithms/placement/: CMakeLists.txt  SimulatedAnnealing.hpp
src/algorithms/placement/meta-heuristics/: CMakeLists.txt
src/algorithms/placement/meta-heuristics/simulated-annealing/: I_SimulatedAnnealing.hpp  Parameters.hpp
src/algorithms/routing/: BreadthFirstSearch.hpp  DynamicProgramming.hpp
src/patterns/: Use.hpp
src/stores/: aig.hpp  benchmark.hpp  filetypes.hpp  mig.hpp  pandr.hpp
test/: CMakeLists.txt  CTestTestfile.cmake  CellTest.cpp  ChessBoardTest.cpp  LevelPlacementTest.cpp  LevelRoutingTest.cpp  Makefile  NetworkTest.cpp  PandRTest.cpp  PandR_GATest.cpp  PandR_LevelPRTest.cpp  PandR_TopoOrderTest.cpp  PlacementAndRoutingTest.cpp  SolutionTest.cpp  cmake_install.cmake  test.sh  test_area.cpp  test_topo_sort.cpp
test/catch2/: catch.hpp
test/performance/: test.py  test.sh
